cmake_minimum_required(VERSION 3.5)

project(AuraUITest01 VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)

add_compile_definitions(

    MOVETOTHREAD
#注释掉后第四个窗体会阻塞整体
)



set(PROJECT_SOURCES
        main.cpp
        widget.cpp
        widget.h
        widget.ui
        testwidget.h
        testwidget.cpp

        testbyqtimerwidget.cpp
        testbyqtimerwidget.h

        testbycorewidget.cpp
        testbycorewidget.h

        testbythreadwidget.cpp
        testbythreadwidget.h
        testthread.cpp
        testthread.h

        testbycaculatorwidget.cpp
        testbycaculatorwidget.h
        caculator.cpp
        caculator.h
)

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_executable(AuraUITest01
        MANUAL_FINALIZATION
        ${PROJECT_SOURCES}
    )
# Define target properties for Android with Qt 6 as:
#    set_property(TARGET AuraUITest01 APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
else()
    if(ANDROID)
        add_library(AuraUITest01 SHARED
            ${PROJECT_SOURCES}
        )
# Define properties for Android with Qt 5 after find_package() calls as:
#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
    else()
        add_executable(AuraUITest01
            ${PROJECT_SOURCES}
        )
    endif()
endif()

target_link_libraries(AuraUITest01 PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)

set_target_properties(AuraUITest01 PROPERTIES
    MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

install(TARGETS AuraUITest01
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(AuraUITest01)
endif()
